fix alignment

--- a/style.css
+++ b/style.css
@@ -39,3 +39,7 @@ button {
 #clock-container {
     margin-left: 20px;
 }
+
+.box {
+    margin-left: 7em;
+}
